2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Apply zero patches at the end, not the start
	so that the version of vm_version.cpp to which
	icedtea-core-build.patch applies is known.
	* Makefile.in: Regenerated.
	* patches/icedtea-hotspot7-build-fixes.patch:
	Regenerated against the version of vm_version.cpp
	modified by icedtea-core-build.patch.
	
2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Ensure we generate UNIXProcess.java in the
	source directory, as in the OpenJDK build itself.
	* Makefile.in: Regenerated.

2008-05-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-signed-types.patch:
	Regenerated against b26.
	
2008-05-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Do a find for rt files on both the
	source dir and the build dir, removing
	duplicates when these are the same.
	* Makefile.in: Regenerated.

2008-05-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-override.patch:
	Correct paths in patch so it applies.
	
2008-05-27  Mark Wielaard  <mark@klomp.org>

	* Makefile.am:
	Use generated and rt as necessary.
	* Makefile.in: Regenerated.

2008-05-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Remove unneeded zero patches and include
	new override patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-ecj.patch:
	Remove override patch.
	* patches/icedtea-hotspot7-build-fixes.patch:
	Remove changes no longer required with b26.
	* patches/icedtea-override.patch:
	New separate file for @Override patch so it
	can be applied early enough for some versions
	of ecj.

2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Fix reference to abs_top_srcdir when
	accessing bootstrap directory.
	* Makefile.in: Regenerated.

2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Add XSL patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-xslfix.patch: