@@ -245,18 +245,18 @@ clean-clone:
 
 # Link ports sources into tree
 stamps/ports.stamp: stamps/clone.stamp
-	for target in ports/hotspot/build/*/makefiles/* \
-		      ports/hotspot/src/*/*; do \
-	  link=$$(dirname $$target | sed 's/^ports/openjdk/'); \
-	  ln -sf $$PWD/$$target $$link; \
+	for target in ${abs_top_srcdir}/ports/hotspot/build/*/makefiles/* \
+		      ${abs_top_srcdir}/ports/hotspot/src/*/*; do \
+	  link=$$(dirname $$target | sed 's/^.*ports/openjdk/'); \
+	  ln -sf $$target $$link; \
 	done
-	ln -sf $$PWD/platform_zero openjdk/hotspot/build/linux
+	ln -sf ${abs_top_builddir}/platform_zero openjdk/hotspot/build/linux
 	if ! test "x$(ICEDTEA_CORE_BUILD)$(CACAO)" = "xno"; then \
 	  mkdir -p openjdk/jdk/src/solaris/bin/$(BUILD_ARCH_DIR); \
-	  ln -sf $$PWD/jvm.cfg openjdk/jdk/src/solaris/bin/$(BUILD_ARCH_DIR)/jvm.cfg; \
+	  ln -sf ${abs_top_builddir}/jvm.cfg openjdk/jdk/src/solaris/bin/$(BUILD_ARCH_DIR)/jvm.cfg; \
 	fi
 	if ! test "x$(ICEDTEA_ZERO_BUILD)$(CACAO)" = "xno"; then \
-	  ln -sf $$PWD/ergo.c openjdk/jdk/src/solaris/bin/ergo_$(BUILD_ARCH_DIR).c; \
+	  ln -sf ${abs_top_builddir}/ergo.c openjdk/jdk/src/solaris/bin/ergo_$(BUILD_ARCH_DIR).c; \
 	fi
 	mkdir -p stamps
 	touch stamps/ports.stamp
@@ -435,18 +435,18 @@ clean-clone-ecj:
 
 # Link ports sources into tree
 stamps/ports-ecj.stamp: stamps/clone-ecj.stamp
-	for target in ports/hotspot/build/*/makefiles/* \
-		      ports/hotspot/src/*/*; do \
-	  link=$$(dirname $$target | sed 's/^ports/openjdk-ecj/'); \
-	  ln -sf $$PWD/$$target $$link; \
+	for target in ${abs_top_srcdir}/ports/hotspot/build/*/makefiles/* \
+		      ${abs_top_srcdir}/ports/hotspot/src/*/*; do \
+	  link=$$(dirname $$target | sed 's/^.*ports/openjdk-ecj/'); \
+	  ln -sf $$target $$link; \
 	done
-	ln -sf $$PWD/platform_zero openjdk-ecj/hotspot/build/linux
+	ln -sf ${abs_top_builddir}/platform_zero openjdk-ecj/hotspot/build/linux
 	if ! test "x$(ICEDTEA_CORE_BUILD)$(CACAO)" = "xno"; then \
 	  mkdir -p openjdk-ecj/jdk/src/solaris/bin/$(BUILD_ARCH_DIR); \
-	  ln -sf $$PWD/jvm.cfg openjdk-ecj/jdk/src/solaris/bin/$(BUILD_ARCH_DIR)/jvm.cfg; \
+	  ln -sf ${abs_top_builddir}/jvm.cfg openjdk-ecj/jdk/src/solaris/bin/$(BUILD_ARCH_DIR)/jvm.cfg; \
 	fi
 	if ! test "x$(ICEDTEA_ZERO_BUILD)$(CACAO)" = "xno"; then \
-	  ln -sf $$PWD/ergo.c openjdk-ecj/jdk/src/solaris/bin/ergo_$(BUILD_ARCH_DIR).c; \
+	  ln -sf ${abs_top_builddir}/ergo.c openjdk-ecj/jdk/src/solaris/bin/ergo_$(BUILD_ARCH_DIR).c; \
 	fi
 	mkdir -p stamps
 	touch stamps/ports-ecj.stamp
