@@ -1,6 +1,15 @@
 2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
+	(ports-ecj.stamp): Pick up ports file from
+	srcdir.
+	(ports.stamp): Likewise.
+	* Makefile.in: Regenerated.
+	* .hgignore: Add UNIXProcess.java
+	
+2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
 	Apply zero patches at the end, not the start
 	so that the version of vm_version.cpp to which
 	icedtea-core-build.patch applies is known.
